<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wishCountPredictor">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="199dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:text="@string/wish_calculator"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/current_saved_wishes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/savedWishesVar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/days_until_end_of_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/daysUntilupdateEndVar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/savedWishesVar" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/updates_until_character"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/updatesUntilCharacterVar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/daysUntilupdateEndVar" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="109dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:text="@string/paid_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatesUntilCharacterVar" />

    <RadioGroup
        android:id="@+id/paidRadioGroup"
        android:layout_width="112dp"
        android:layout_height="193dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:checkedButton="@id/welkinBattlePassRadioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
            android:id="@+id/freeToPlayRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f2p" />

        <RadioButton
            android:id="@+id/battlePassRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battlepass" />

        <RadioButton
            android:id="@+id/welkinRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welkin" />

        <RadioButton
            android:id="@+id/welkinBattlePassRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welkinbp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="92dp"
        android:layout_height="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/update_half"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatesUntilCharacterVar" />

    <RadioGroup
        android:id="@+id/updateHalfRadioGroup"
        android:layout_width="92dp"
        android:layout_height="95dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/firstHalfRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second" />
    </RadioGroup>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateHalfRadioGroup" />

    <TextView
        android:id="@+id/wishes"
        android:layout_width="190dp"
        android:layout_height="103dp"
        android:layout_marginBottom="50dp"
        android:text="Result"
        android:textAlignment="center"
        android:textColor="#C800FF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>